--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body {
     background: transparent;
     border: none;
     resize: none;
-    color: #000000;
     border-left: 1px solid black;
     padding: 10px;
   }
@@ -43,8 +42,8 @@ body {
   }
   
   .past {
-    background-color: #d3d3d3;
-    color: white;
+    background-color: darkgray;
+    color: black;
   }
   
   .present {
